it almost works

--- a/servant-auth-firebase/package.yaml
+++ b/servant-auth-firebase/package.yaml
@@ -12,8 +12,11 @@ dependencies:
 - firebase-jwk
 - http-types
 - servant
+- aeson
+- containers
 - servant-server
 - text
+- microlens
 - wai
 - time
 - warp
