--- a/servant-auth-firebase/servant-auth-firebase.cabal
+++ b/servant-auth-firebase/servant-auth-firebase.cabal
@@ -34,6 +34,7 @@ library
     , monad-time
     , mtl
     , servant
+    , servant-auth-server
     , servant-server
     , text
     , time
@@ -66,6 +67,7 @@ test-suite servant-auth-firebase-test
     , mtl
     , servant
     , servant-auth-firebase
+    , servant-auth-server
     , servant-server
     , text
     , time
