--- a/servant-auth-firebase/servant-auth-firebase.cabal
+++ b/servant-auth-firebase/servant-auth-firebase.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -14,20 +14,44 @@ build-type:     Simple
 
 library
   exposed-modules:
+      Firebase.Auth
       Servant.Auth.Firebase
   other-modules:
       Paths_servant_auth_firebase
   hs-source-dirs:
       src
   default-extensions:
-      ImportQualifiedPost InstanceSigs DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses NoImplicitPrelude NamedFieldPuns OverloadedLabels OverloadedStrings RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeOperators ViewPatterns
-  ghc-options: -Werror -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Wno-name-shadowing -Wincomplete-record-updates -Wincomplete-patterns
+      BlockArguments
+      DataKinds
+      DefaultSignatures
+      DeriveAnyClass
+      DerivingStrategies
+      DerivingVia
+      DuplicateRecordFields
+      EmptyCase
+      FunctionalDependencies
+      GADTs
+      GeneralizedNewtypeDeriving
+      ImportQualifiedPost
+      LambdaCase
+      NamedFieldPuns
+      NoImplicitPrelude
+      OverloadedLabels
+      OverloadedStrings
+      RankNTypes
+      StrictData
+      TupleSections
+      TypeFamilies
+      ViewPatterns
+  ghc-options: -Weverything -Werror -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe -Wno-missing-kind-signatures -Wno-monomorphism-restriction
   build-depends:
       aeson
     , base >=4.7 && <5
     , bytestring
     , containers
     , firebase-jwk
+    , generic-lens
+    , http-client-tls
     , http-types
     , insert-ordered-containers
     , jose
@@ -35,15 +59,16 @@ library
     , monad-time
     , mtl
     , openapi3
+    , rio
     , servant
     , servant-auth-server
+    , servant-client
+    , servant-client-core
     , servant-openapi3
     , servant-server
     , text
-    , time
     , wai
-    , warp
-  default-language: Haskell2010
+  default-language: GHC2021
 
 test-suite servant-auth-firebase-test
   type: exitcode-stdio-1.0
@@ -54,29 +79,38 @@ test-suite servant-auth-firebase-test
   hs-source-dirs:
       test
   default-extensions:
-      ImportQualifiedPost InstanceSigs DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses NoImplicitPrelude NamedFieldPuns OverloadedLabels OverloadedStrings RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeOperators ViewPatterns
-  ghc-options: -Werror -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Wno-name-shadowing -Wincomplete-record-updates -Wincomplete-patterns -threaded -rtsopts -with-rtsopts=-N
+      BlockArguments
+      DataKinds
+      DefaultSignatures
+      DeriveAnyClass
+      DerivingStrategies
+      DerivingVia
+      DuplicateRecordFields
+      EmptyCase
+      FunctionalDependencies
+      GADTs
+      GeneralizedNewtypeDeriving
+      ImportQualifiedPost
+      LambdaCase
+      NamedFieldPuns
+      NoImplicitPrelude
+      OverloadedLabels
+      OverloadedStrings
+      RankNTypes
+      StrictData
+      TupleSections
+      TypeFamilies
+      ViewPatterns
+  ghc-options: -Weverything -Werror -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe -Wno-missing-kind-signatures -Wno-monomorphism-restriction -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
-    , containers
-    , firebase-jwk
     , hspec
-    , http-types
-    , insert-ordered-containers
-    , jose
-    , microlens
     , monad-time
     , mtl
-    , openapi3
-    , servant
     , servant-auth-firebase
-    , servant-auth-server
-    , servant-openapi3
     , servant-server
     , text
     , time
-    , wai
     , warp
-  default-language: Haskell2010
+  default-language: GHC2021
