--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,9 @@
-resolver: lts-22.7
+resolver: lts-23.0
 packages:
 - servant-auth-firebase
 
 extra-deps:
   - git: https://github.com/tommyengstrom/firebase-jwk.git
     commit: b7cbc592e172709172c7ff6c181f393a1905d1f5
+  - x509-1.7.7@sha256:90eef2d745a654146fc1c325e035eaddac531e4d2145d4bc1dcf4b8fad439d34,2276
+  - x509-store-1.6.9@sha256:1f1abeab5bacf1407b920d0f34f4c35a5ad450ff0d8121cd3dc76460f81e711d,1716
